service.yaml
apiVersion: v1
kind: Service
metadata:
  name: truecommand
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: truecommand
