ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truecommand-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - ktruecommand.lab.stelb.de
      secretName: truecommand-lab-tls-prod
  rules:
  - host: ktruecommand.lab.stelb.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: truecommand
             port:
               number: 80
